force-app/main/default/objects/LOAN__c/LOAN__c.object-meta.xml
<CustomObject>
    <label>LOAN</label>
    <nameField>
        <displayFormat>LOAN-{000}</displayFormat>
        <label>Loan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOANS</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>