force-app/main/default/objects/LOAN__c/fields/Avg_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Avg_Installment_Amount__c</fullName>
    <formula>Loan_Amount__c /  Total_Number_Of_Installments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>