force-app/main/default/objects/LOAN__c/fields/Loan_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Name__c</fullName>
    <inlineHelpText>Loan name like Personal Loan or Home Loan etc....</inlineHelpText>
    <label>Loan Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>