force-app/main/default/objects/LOAN__c/fields/Loan_rate_of_interest__c.field-meta.xml
<CustomField>
    <fullName>Loan_rate_of_interest__c</fullName>
    <label>Rate of Interest</label>
    <precision>17</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>