force-app/main/default/objects/LOAN__c/fields/Tenure_for_loan_in_months__c.field-meta.xml
<CustomField>
    <fullName>Tenure_for_loan_in_months__c</fullName>
    <inlineHelpText>Total months to make all the installments from account holder.</inlineHelpText>
    <label>Tenure for loan in months</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>