force-app/main/default/objects/LOAN__c/fields/Total_Number_Of_Installments__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Installments__c</fullName>
    <label>Total Number Of Installments</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>